--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,4 +53,27 @@
     background-color: white;
     color:black;
     font-weight:bolder;
-} 
+}
+// Cutom at screen width
+
+@media (min-width: 300px) {
+    p {
+        font-size: 14px;
+    }
+    figure {
+        margin-top: 10px;
+    }
+}
+@media (min-width: 500px) {
+    p {
+        font-size:18px;
+    }
+}
+@media (min-width: 1000px) {
+    p {
+        font-size:20px;
+    }
+    figure {
+        margin-top: 0px;
+    }
+}
