--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,15 +10,15 @@
 // Custom 
 .gotop {
     position: fixed;
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     bottom: 40px;
-    right: 50px;
+    right: 40px;
     text-decoration: none;
     text-align: center;
-    line-height: 50px;
+    line-height: 35px;
     color: white;
-    font-size: 22px;
+    font-size: 20px;
     background-color: black;
     transition: 0.5s;
     border: 2px solid black;
@@ -31,30 +31,28 @@
 }
 .buttons-side {
     position:fixed;
-    width: 50px;
     bottom: 200px;
     right:50px;
 }
 .buttons-side a {
     display:block;
-    writing-mode: vertical-lr;
+    writing-mode: vertical-rl;
     text-orientation:sideways;
-    width:50px;
     padding:20px;
-    height: 110px;
+    padding-left: 30px;
     background-color: black;
     color: white;
     border: 2px solid black;
-    font-size: 12px;
     text-align: center;
     text-decoration: none;
+    line-height: 100%;
 }
 .buttons-side a:hover {
     background-color: white;
     color:black;
     font-weight:bolder;
 }
-// Cutom at screen width
+// Custom at screen width
 
 @media (min-width: 300px) {
     p {
@@ -63,10 +61,32 @@
     figure {
         margin-top: 10px;
     }
+    .buttons-side {
+        width: 20px;
+    }
+    .buttons-side a {
+        width: 20px;
+        height: 90px;
+        font-size: 8px;
+    }
 }
 @media (min-width: 500px) {
     p {
         font-size:18px;
+    }
+    .buttons-side {
+        width:50px;
+    }
+    .buttons-side a {
+        width:50px;
+        height:100px;
+        font-size: 14px;
+    }
+    .gotop {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+
     }
 }
 @media (min-width: 1000px) {
